--- a/compose-files/servarr/compose.yaml
+++ b/compose-files/servarr/compose.yaml
@@ -4,8 +4,8 @@ services:
     image: fallenbagel/jellyseerr:latest
     container_name: jellyseerr
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     environment:
       PUID: 1000
       PGID: 1000
@@ -19,8 +19,8 @@ services:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     volumes:
       - ${BASE_PATH}/config/prowlarr/config:/config
     environment:
@@ -33,8 +33,8 @@ services:
     image: flaresolverr/flaresolverr:latest
     container_name: flaresolverr
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     environment:
       PUID: 1000
       PGID: 1000
@@ -45,8 +45,8 @@ services:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     environment:
       PUID: 1000
       PGID: 1000
@@ -60,8 +60,8 @@ services:
     image: lscr.io/linuxserver/radarr:latest
     container_name: radarr
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     environment:
       PUID: 1000
       PGID: 1000
@@ -75,8 +75,8 @@ services:
     image: lscr.io/linuxserver/bazarr:latest
     container_name: bazarr
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     environment:
       PUID: 1000
       PGID: 1000
@@ -90,8 +90,8 @@ services:
     image: lscr.io/linuxserver/readarr:develop
     container_name: readarr-audiobooks
     depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
+      - transmission-openvpn
+    network_mode: "service:transmission-openvpn"
     environment:
       PUID: 1000
       PGID: 1000
