update vpn creds

--- a/compose-files/openvpn-transmission/compose.yaml
+++ b/compose-files/openvpn-transmission/compose.yaml
@@ -13,7 +13,8 @@ services:
     environment:
       PUID: 1000
       PGID: 1000
-      OPENVPN_PROVIDER: PRIVATEVPN
+      OPENVPN_CONFIG: se_all
+      OPENVPN_PROVIDER: MULLVAD
       OPENVPN_USERNAME: $OPENVPN_USERNAME
       OPENVPN_PASSWORD: $OPENVPN_PASSWORD
       DISABLE_IPV6: true
