tailscale added properly

--- a/compose-files/media/compose.yaml
+++ b/compose-files/media/compose.yaml
@@ -17,6 +17,8 @@ services:
     restart: unless-stopped
     networks:
       - homelab
+    labels:
+      tsdproxy.enable: true
 
   audiobookshelf:
     image: ghcr.io/advplyr/audiobookshelf:latest
@@ -32,6 +34,8 @@ services:
     restart: unless-stopped
     networks:
       - homelab
+    labels:
+      tsdproxy.enable: true
 
   jellyfin:
     image: jellyfin/jellyfin:latest
@@ -54,6 +58,8 @@ services:
       - "host.docker.internal:host-gateway"
     networks:
       - homelab
+    labels:
+      tsdproxy.enable: true
 
   jellystat:
     container_name: jellystat
@@ -73,6 +79,8 @@ services:
     restart: unless-stopped
     networks:
       - homelab
+    labels:
+      tsdproxy.enable: true
 
   jellystat-db:
     container_name: jellystat-db
