--- a/compose-files/management/compose.yaml
+++ b/compose-files/management/compose.yaml
@@ -12,6 +12,9 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - homelab
+    labels:
+      tsdproxy.enable: true
+      tsdproxy.container_port: 9443
   
   autoheal:
     container_name: autoheal
