--- a/compose-files/nginx-proxy-manager/compose.yaml
+++ b/compose-files/nginx-proxy-manager/compose.yaml
@@ -3,10 +3,12 @@ services:
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
     container_name: nginx-proxy-manager
-    ports:
-      - 80:80
-      - 81:81
-      - 443:443
+    depends_on:
+      - tailscale
+    # ports:
+      # - 80:80
+      # - 81:81
+      # - 443:443
     environment:
       DB_MYSQL_HOST: nginx-pm-db
       DB_MYSQL_PORT: 3306
@@ -21,8 +23,7 @@ services:
       interval: 10s
       timeout: 3s
     restart: unless-stopped
-    networks:
-      - homelab
+    network_mode: "service:tailscale"
 
   nginx-pm-db:
     image: jc21/mariadb-aria:latest
