add autoheal to homelab network

--- a/compose-files/management/compose.yaml
+++ b/compose-files/management/compose.yaml
@@ -24,6 +24,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
+    networks:
+      - homelab
 
   watchtower:
     container_name: watchtower
